文字前加了空格、文字前加了空格、box版面調整

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     .box{
       background-color: white;
-      width: 35%;
+      width: 25%;
       margin: 100px auto;
       border-radius: 2%;
       position: relative;
@@ -44,7 +44,7 @@
 
     .roseblock{
       background-color: hsl(330, 100%, 98%);
-      width: 90%;
+      width: 98%;
       border-radius: 3%;
       padding: 5px 0px 10px 25px;
       margin-bottom: 10px;
@@ -175,36 +175,36 @@
     <div class="roseblock">
       <h3>Preparation time</h3>
       <ul class="custom-list">
-        <li><strong>Total: </strong><span class="normal">Approximately 10 minutes</span></li>
-        <li><strong>Preparation: </strong><span class="normal"></span>5 minutes</span></li>
-        <li><strong>Cooking: </strong><span class="normal"></span>5 minutes</span></li>
+        <li><strong>&emsp;Total: </strong><span class="normal">Approximately 10 minutes</span></li>
+        <li><strong>&emsp;Preparation: </strong><span class="normal"></span>5 minutes</span></li>
+        <li><strong>&emsp;Cooking: </strong><span class="normal"></span>5 minutes</span></li>
       </ul>
     </div>
 
     <h2>Ingredients</h2>
     <ul class="custom-list">
-      <li>2-3 large eggs</li>
-      <li>Salt, to taste</li>
-      <li>Pepper, to taste</li>
-      <li>1 tablespoon of butter or oil</li>
-      <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      <li>&emsp;2-3 large eggs</li>
+      <li>&emsp;Salt, to taste</li>
+      <li>&emsp;Pepper, to taste</li>
+      <li>&emsp;1 tablespoon of butter or oil</li>
+      <li>&emsp;Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
     </ul>
   
     <hr/>
 
     <h2>Instructions</h2>
     <ol class="custom-list">
-      <li><strong>Beat the eggs: </strong><span class="normal">In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</span></li>
+      <li><strong>&emsp;Beat the eggs: </strong><span class="normal">In a bowl, beat the eggs with a pinch of salt and pepper until they are &emsp;well mixed. You can add a tablespoon of water or milk for a fluffier texture.</span></li>
 
-      <li><strong>Heat the pan: </strong><span class="normal">Place a non-stick frying pan over medium heat and add butter or oil.</span></li>
+      <li><strong>&emsp;Heat the pan: </strong><span class="normal">Place a non-stick frying pan over medium heat and add butter or oil.</span></li>
 
-      <li><strong>Cook the omelette: </strong><span class="normal">Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</span></li>
+      <li><strong>&emsp;Cook the omelette: </strong><span class="normal">Once the butter is melted and bubbling, pour in the eggs. Tilt the &emsp;pan to ensure the eggs evenly coat the surface.</span></li>
 
-      <li><strong>Add fillings (optional): </strong><span class="normal">When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
+      <li><strong>&emsp;Add fillings (optional): </strong><span class="normal">When the eggs begin to set at the edges but are still slightly &emsp;&thinsp;runny in the middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
 
-      <li><strong>Fold and serve: </strong><span class="normal">As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</span></li>
+      <li><strong>&emsp;Fold and serve: </strong><span class="normal">As the omelette continues to cook, carefully lift one edge and fold it &emsp;over the fillings. Let it cook for another minute, then slide it onto a plate.</span></li>
 
-      <li><strong>Enjoy: </strong><span class="normal">Serve hot, with additional salt and pepper if needed.</span></li>
+      <li><strong>&emsp;Enjoy: </strong><span class="normal">Serve hot, with additional salt and pepper if needed.</span></li>
     </ol>
 
     <hr/>
